# latencylab

./: .coveragerc  .flake8  .gitignore  ALL_SOURCES.txt  ARCHITECTURE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  runner.py  stellody_music_discovery.json  stellody_music_discovery_STRESS.json
examples/: contention.json  interactive.json
latencylab/: __init__.py  __main__.py  cli.py  executors.py  io.py  metrics.py  model.py  sim.py  sim_legacy.py  sim_v2.py  types.py  validate.py
latencylab_ui/: __init__.py  __main__.py  about_dialog.py  app.py  critical_path_frequency_widget.py  distributions_agg.py  distributions_dock.py  focus_cycle.py  focus_cycle_widgets.py  how_to_read_dialog.py  licence_dialog.py  main_licence_dialog.py  main_window.py  main_window_bindings.py  main_window_dock_switching.py  main_window_file_io.py  main_window_menus.py  main_window_panels.py  main_window_top_bar.py  model_composer_contexts_editor.py  model_composer_dock.py  model_composer_system_editor.py  model_composer_tasks_editor.py  model_composer_types.py  model_composer_widgets.py  model_composer_wiring_editor.py  outputs_view.py  qt_style_helpers.py  run_controller.py  run_controller_facade.py  theme.py  theme_stylesheet.py  theme_toggle.py
tests/: conftest.py  test_cli_io_and_main.py  test_codebase_size_limits.py  test_coverage_executors_and_model.py  test_determinism.py  test_metrics_and_validation_coverage.py  test_migration_oracle_invariants.py  test_model_composer_coverage.py  test_model_composer_dock_coverage.py  test_model_composer_export_branches.py  test_ui_about_dialog.py  (+31 more)
